force-app/main/default/objects/Clarity_Form_Style__c/Clarity_Form_Style__c.object-meta.xml
<CustomObject>
    <label>Clarity Form Style</label>
    <nameField>
        <label>Clarity Form Style Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clarity Form Styles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>