force-app/main/default/objects/Clarity_Form_Style__c/fields/Background_Image__c.field-meta.xml
<CustomField>
    <fullName>Background_Image__c</fullName>
    <label>Background Image</label>
    <length>18</length>
    <type>Text</type>
</CustomField>