force-app/main/default/objects/Clarity_Form_Style__c/fields/Button_Color__c.field-meta.xml
<CustomField>
    <fullName>Button_Color__c</fullName>
    <label>Button Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>